add tag img ang video tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>the văn<br>bản</p>
 <p>the van bản</p>
 <a href="https://github.com/Mungvu18/demorepo.git">thẻ địa chỉ anchor thuộc tính href là nơi gán src</a>
-<img src="img/code4-org.png" width="200px" height="200px" alt="fasle">
+<img src="img/code4-org.png" width="1648" height="811" alt="ảnh không tồn tại">
 <ul>
     <li> Cafe </li>
     <li> tea </li>
@@ -32,6 +32,5 @@
     <li> water </li>
 </ol>
 <body>
-
 </body>
 </html>
