add file thẻ vide img 4/11

--- a/tag_video_img.html
+++ b/tag_video_img.html
@@ -9,13 +9,15 @@
           <img src="img_video/code4-org.png"
                alt="Not see emage"
                target="_blank"
-               style="float:above; width:500px;height: 500px">
+               style="float:top; width:500px;height: 500px">
           Finish code4.org of Vũ Văn Mừng</strong></p>
-    <video width="300" height="300" autoplay>
+    <p><video width="300" height="300" autoplay>
          <source src="img_video/mov_bbb.mp4" type="video/mp4">
          <source src="img_video/mov_bbb.ogg" type="video/ogg">
          Your browser does not support video
-    </video>
+       </video>
+         <br> Video for child
+    </p>
 </head>
 <body>
 
